# rpcvelb

./: .gitignore  LICENSE  README.md
problem1/: CMakeLists.txt  test_module.cpp
problem1/src/: Core.cpp  Core.h  Ctgp.cpp  Ctgp.h  Dcdm.cpp  Dcdm.h  Dcdm_l2svm.cpp  Dcdm_l2svm.h  Dcdm_linear.cpp  Dcdm_linear.h  Dual_solver.hpp  Faop.cpp  Faop.h  L2r_huber_svc.cpp  L2r_huber_svc.h  PrimalSolver.hpp  Primal_function.hpp  Primal_solver.hpp  Snot.cpp  Snot.h  Solver.hpp  Subgrad_method.cpp  Subgrad_method.h  Tron.cpp  Tron.h
problem2/: CMakeLists.txt  test_module.cpp
problem2/lib/: Function.hpp  L2R_Huber_SVC.cpp  L2R_Huber_SVC.h  L2R_L2L_SVC.cpp  L2R_L2L_SVC.h  L2R_LR.cpp  L2R_LR.h  Solver.hpp  Tools.cpp  Tools.h  Tron.cpp  Tron.h  Validation_error_path.cpp  Validation_error_path.h
